// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

let x : $Trusted<string> = "hello";
module.exports = x;

=====================================output=====================================
// @flow

let x: $Trusted<string> = "hello";
module.exports = x;

================================================================================
`;

exports[`d.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

const a = require('../a')
let x : number = a;

=====================================output=====================================
//@flow

const a = require("../a");
let x: number = a;

================================================================================
`;

exports[`e.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const f = require('../f');
module.exports = f;

=====================================output=====================================
// @flow

const f = require("../f");
module.exports = f;

================================================================================
`;

exports[`g.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const h = require('../other_folder/h');
(h : string);

=====================================output=====================================
const h = require("../other_folder/h");
(h: string);

================================================================================
`;
